--- a/assets/package.json
+++ b/assets/package.json
@@ -2,12 +2,16 @@
     "name": "thexr_assets",
     "version": "0.1.0",
     "private": true,
+    "browser": {
+        "babylonjs": "./shims/babylon.js"
+    },
     "scripts": {
         "build": "node esbuild.js",
         "deploy": "node esbuild.js --deploy",
         "watch": "node esbuild.js --watch"
     },
     "dependencies": {
+        "babylonjs": "5.0.0-alpha.63",
         "phoenix": "file:../deps/phoenix",
         "phoenix_html": "file:../deps/phoenix_html",
         "phoenix_live_view": "file:../deps/phoenix_live_view"
