--- a/assets/package.json
+++ b/assets/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "@fal-works/esbuild-plugin-global-externals": "^2.1.2",
         "babylonjs": "5.0.0-alpha.63",
+        "babylonjs-materials": "5.0.0-alpha.63",
         "phoenix": "file:../deps/phoenix",
         "phoenix_html": "file:../deps/phoenix_html",
         "phoenix_live_view": "file:../deps/phoenix_live_view"
