--- a/assets/package.json
+++ b/assets/package.json
@@ -13,7 +13,8 @@
         "babylonjs-materials": "5.0.0-alpha.63",
         "phoenix": "file:../deps/phoenix",
         "phoenix_html": "file:../deps/phoenix_html",
-        "phoenix_live_view": "file:../deps/phoenix_live_view"
+        "phoenix_live_view": "file:../deps/phoenix_live_view",
+        "rxjs": "^7.5.2"
     },
     "devDependencies": {
         "@types/phoenix": "^1.5.4",
