--- a/assets/package.json
+++ b/assets/package.json
@@ -1,24 +1,32 @@
 {
-    "name": "thexr_assets",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "build": "node esbuild.js",
-        "deploy": "node esbuild.js --deploy",
-        "watch": "node esbuild.js --watch"
-    },
-    "dependencies": {
-        "@fal-works/esbuild-plugin-global-externals": "^2.1.2",
-        "agora-rtc-sdk-ng": "^4.8.1",
-        "babylonjs": "5.0.0-alpha.63",
-        "babylonjs-materials": "5.0.0-alpha.63",
-        "phoenix": "file:../deps/phoenix",
-        "phoenix_html": "file:../deps/phoenix_html",
-        "phoenix_live_view": "file:../deps/phoenix_live_view",
-        "rxjs": "^7.5.2"
-    },
-    "devDependencies": {
-        "@types/phoenix": "^1.5.4",
-        "esbuild": "^0.14.2"
-    }
+  "name": "thexr_assets",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "build": "node esbuild.js",
+    "deploy": "node esbuild.js --deploy",
+    "watch": "node esbuild.js --watch",
+    "check": "svelte-check --tsconfig ./tsconfig.json"
+  },
+  "dependencies": {
+    "@fal-works/esbuild-plugin-global-externals": "^2.1.2",
+    "agora-rtc-sdk-ng": "^4.8.1",
+    "babylonjs": "5.0.0-alpha.63",
+    "babylonjs-materials": "5.0.0-alpha.63",
+    "phoenix": "file:../deps/phoenix",
+    "phoenix_html": "file:../deps/phoenix_html",
+    "phoenix_live_view": "file:../deps/phoenix_live_view",
+    "rxjs": "^7.5.2"
+  },
+  "devDependencies": {
+    "@rollup/plugin-typescript": "^8.0.0",
+    "@tsconfig/svelte": "^2.0.1",
+    "@types/phoenix": "^1.5.4",
+    "esbuild": "^0.14.8",
+    "esbuild-svelte": "^0.6.2",
+    "svelte-check": "^2.3.0",
+    "svelte-preprocess": "^4.10.2",
+    "tslib": "^2.0.0",
+    "typescript": "^4.5.5"
+  }
 }
