--- a/assets/package.json
+++ b/assets/package.json
@@ -16,7 +16,9 @@
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "phoenix_live_view": "file:../deps/phoenix_live_view",
-    "rxjs": "^7.5.2"
+    "rxjs": "^7.5.2",
+    "svelte-forms-lib": "^2.0.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.0.0",
