--- a/assets/package.json
+++ b/assets/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@fal-works/esbuild-plugin-global-externals": "^2.1.2",
+    "@urql/svelte": "^1.3.3",
     "agora-rtc-sdk-ng": "^4.8.1",
     "babylonjs": "5.0.0-alpha.63",
     "babylonjs-materials": "5.0.0-alpha.63",
+    "graphql": "^16.3.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "phoenix_live_view": "file:../deps/phoenix_live_view",
