--- a/assets/package.json
+++ b/assets/package.json
@@ -13,6 +13,7 @@
     "@urql/svelte": "^1.3.3",
     "agora-rtc-sdk-ng": "^4.8.1",
     "babylonjs": "5.0.0-alpha.63",
+    "babylonjs-gui": "5.0.0-alpha.63",
     "babylonjs-materials": "5.0.0-alpha.63",
     "graphql": "^16.3.0",
     "phoenix": "file:../deps/phoenix",
