--- a/assets/package.json
+++ b/assets/package.json
@@ -6,6 +6,7 @@
     "build": "node esbuild.js",
     "deploy": "node esbuild.js --deploy",
     "watch": "node esbuild.js --watch",
+    "typecheck": "tsc --watch",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "dependencies": {
@@ -33,7 +34,8 @@
     "esbuild-svelte": "^0.6.2",
     "svelte-check": "^2.3.0",
     "svelte-preprocess": "^4.10.2",
+    "tsc": "^2.0.4",
     "tslib": "^2.0.0",
-    "typescript": "^4.5.5"
+    "typescript": "^4.6.2"
   }
 }
