--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,8 +1,36 @@
-FROM nicbet/phoenix:1.6.0
+FROM elixir:1.13.1
 
-RUN apt-get install -y ruby \
-  && gem install --no-ri --no-rdoc htmlbeautifier \
-  && npm i -g yarn \
+# Build Args
+ARG PHOENIX_VERSION=1.6.6
+ARG NODEJS_VERSION=16.x
+
+# Apt
+RUN apt-get update && apt-get upgrade -y
+RUN apt-get install -y apt-utils
+RUN apt-get install -y build-essential
+RUN apt-get install -y inotify-tools
+
+# Nodejs
+RUN curl -sL https://deb.nodesource.com/setup_${NODEJS_VERSION} | bash
+RUN apt-get install -y nodejs
+
+# Phoenix
+RUN mix local.hex --force
+RUN mix archive.install --force hex phx_new #{PHOENIX_VERSION}
+RUN mix local.rebar --force
+
+# App Directory
+ENV APP_HOME /app
+RUN mkdir -p $APP_HOME
+WORKDIR $APP_HOME
+
+# App Port
+EXPOSE 4000
+
+# Default Command
+CMD ["mix", "phx.server"]
+
+RUN npm i -g yarn \
   && apt-get autoremove -y \
   && apt-get clean -y \
   && rm -rf /var/lib/apt/lists/*
