--- a/assets/package.json
+++ b/assets/package.json
@@ -13,6 +13,7 @@
     "@fal-works/esbuild-plugin-global-externals": "^2.1.2",
     "@urql/svelte": "^1.3.3",
     "agora-rtc-sdk-ng": "^4.8.1",
+    "ammojs-typed": "^1.0.6",
     "babylonjs": "5.0.0-beta.7",
     "babylonjs-gui": "5.0.0-beta.7",
     "babylonjs-materials": "5.0.0-beta.7",
