--- a/assets/package.json
+++ b/assets/package.json
@@ -14,9 +14,9 @@
     "@urql/svelte": "^1.3.3",
     "agora-rtc-sdk-ng": "^4.8.1",
     "ammojs-typed": "^1.0.6",
-    "babylonjs": "5.0.0-beta.7",
-    "babylonjs-gui": "5.0.0-beta.7",
-    "babylonjs-materials": "5.0.0-beta.7",
+    "babylonjs": "^5.7.0",
+    "babylonjs-gui": "^5.7.0",
+    "babylonjs-materials": "^5.7.0",
     "graphql": "^16.3.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
