don't show mic and speaker options if on oculus browser

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,7 @@
         // "mjmcloug.vscode-elixir",
         "jakebecker.elixir-ls",
         "phoenixframework.phoenix",
-        "JamesBirtles.svelte-vscode"
+        "svelte.svelte-vscode"
         // "florinpatrascu.vscode-elixir-snippets",
     ],
     "remoteEnv": {
