--- a/infra/package.json
+++ b/infra/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "aws-cdk-lib": "2.10.0",
     "aws-lambda": "^1.0.7",
+    "aws-sdk": "^2.1143.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.16"
   }
