--- a/assets/package.json
+++ b/assets/package.json
@@ -7,6 +7,7 @@
     "deploy": "node esbuild.js --deploy",
     "watch": "node esbuild.js --watch",
     "typecheck": "tsc --watch",
+    "sync_event_types": "node event-name-watcher.js",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "dependencies": {
@@ -33,6 +34,7 @@
     "@types/uuid": "^8.3.4",
     "esbuild": "^0.14.8",
     "esbuild-svelte": "^0.6.2",
+    "fs": "^0.0.1-security",
     "svelte-check": "^2.3.0",
     "svelte-preprocess": "^4.10.2",
     "tsc": "^2.0.4",
