--- a/assets/tsconfig.json
+++ b/assets/tsconfig.json
@@ -1,15 +1,19 @@
 {
-    "extends": "@tsconfig/svelte/tsconfig.json",
-    "include": [
-        "js/**/*",
-        "node_modules"
-    ],
-    "exclude": [
-        "node_modules/*",
-        "__sapper__/*",
-        "public/*"
-    ],
-    "compilerOptions": {
-        "noEmit": true
-    }
+  "extends": "@tsconfig/svelte/tsconfig.json",
+  "include": ["js/**/*", "node_modules"],
+  "compilerOptions": {
+    "noEmit": true,
+    "target": "ES2015",
+    "module": "ES2015",
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "removeComments": false,
+    "noImplicitAny": false,
+    "suppressImplicitAnyIndexErrors": true,
+    "typeRoots": ["./node_modules/@types/"]
+  },
+  "compileOnSave": true,
+  "exclude": ["node_modules/*", "__sapper__/*", "public/*"]
 }
