--- a/assets/package.json
+++ b/assets/package.json
@@ -34,6 +34,7 @@
     "@types/phoenix": "^1.5.4",
     "@types/uuid": "^8.3.4",
     "chai": "^4.3.6",
+    "cypress": "^10.6.0",
     "esbuild": "^0.14.8",
     "esbuild-svelte": "^0.6.2",
     "fs": "^0.0.1-security",
