--- a/assets/.eslintrc.json
+++ b/assets/.eslintrc.json
@@ -18,6 +18,8 @@
   },
   "rules": {
     "no-case-declarations": "off",
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "off",
+    "no-empty-function": "off",
+    "@typescript-eslint/no-empty-function": "off"
   }
 }
