--- a/assets/package.json
+++ b/assets/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "scripts": {
     "build": "node esbuild.js",
-    "deploy": "node esbuild.js --deploy",
+    "deploy": "node esbuild.js --deploy && npm run sys",
     "watch": "node esbuild.js --watch",
+    "sys": "esbuild `find js/ecs/systems -name '*.ts'` --outdir=../priv/static/systems --target=es2016",
+    "watchsys": "esbuild `find js/ecs/systems -name '*.ts'` --outdir=../priv/static/systems --target=es2016 --watch",
     "typecheck": "tsc --watch",
     "sync_event_types": "node event-name-watcher.js",
     "check": "svelte-check --tsconfig ./tsconfig.json"
