--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,10 @@
     ],
     "eslint.workingDirectories": [
       "./assets"
-    ]
+    ],
+    "[elixir]": {
+      "editor.defaultFormatter": "JakeBecker.elixir-ls"
+    }
 
 
 }
