--- a/assets/.eslintrc.json
+++ b/assets/.eslintrc.json
@@ -21,6 +21,15 @@
     "no-case-declarations": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "no-empty-function": "off",
-    "@typescript-eslint/no-empty-function": "off"
+    "@typescript-eslint/no-empty-function": "off",
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "warn", // or "error"
+      {
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_",
+        "caughtErrorsIgnorePattern": "^_"
+      }
+    ]
   }
 }
