--- a/assets/package.json
+++ b/assets/package.json
@@ -10,7 +10,10 @@
     "watchsys": "esbuild `find js/ecs/pluggable_systems -name '*.ts'` --outdir=../priv/static/systems --target=es2016 --watch",
     "typecheck": "tsc --watch",
     "sync_event_types": "node event-name-watcher.js",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "test:build": "node spec/support/build-tests.js",
+    "test:watch": "node spec/support/build-tests.js --watch",
+    "test:runner": "jasmine-browser-runner serve"
   },
   "dependencies": {
     "@fal-works/esbuild-plugin-global-externals": "^2.1.2",
@@ -32,12 +35,12 @@
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.3.2",
     "@tsconfig/svelte": "^3.0.0",
-    "@types/chai": "^4.3.3",
+    "@types/jasmine": "^4.3.0",
+    "@types/node": "^18.11.9",
     "@types/phoenix": "^1.5.4",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
-    "chai": "^4.3.6",
     "cypress": "^10.6.0",
     "esbuild": "^0.14.8",
     "esbuild-svelte": "^0.6.2",
@@ -47,6 +50,9 @@
     "eslint-plugin-n": "^15.2.5",
     "eslint-plugin-promise": "^6.0.1",
     "fs": "^0.0.1-security",
+    "gaze": "^1.1.3",
+    "jasmine-browser-runner": "^1.2.0",
+    "jasmine-core": "^4.5.0",
     "prettier": "^2.7.1",
     "svelte-check": "^2.3.0",
     "svelte-preprocess": "^4.10.2",
