--- a/assets/tsconfig.json
+++ b/assets/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "@tsconfig/svelte/tsconfig.json",
-  "include": ["js/**/*.ts", "node_modules", "cypress/**/*"],
+  "include": ["js/**/*.ts", "node_modules", "spec/**/*", "cypress/**/*"],
   "compilerOptions": {
+    "types": ["jasmine", "node"],
     "noEmit": true,
     "target": "ES2015",
     "module": "ES2015",
